<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">按摩仪</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="label1">精选</string>
    <string name="label2">疾病知识</string>
    <string name="label3">按摩治疗</string>
    <string name="label4">穴位定位</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asx">阿是穴</string>
    <string name="music_massager">音乐按摩仪</string>
    <string name="desease_1">颈椎病</string>
    <string name="desease_2">肩周炎</string>
    <string name="desease_3">腰痛</string>
    <string name="desease_4">风湿性关节炎</string>
    <string name="desease_5">痛风</string>
    <string name="desease_6">头痛</string>
    <string name="desease_7">腰酸背痛</string>
    <string name="massage_machine_modle1">拳击</string>
    <string name="massage_machine_modle2">针灸</string>
    <string name="massage_machine_modle3">推拿</string>
    <string name="massage_machine_modle4">拨火罐</string>
    <string name="massage_machine_modle5">按摩</string>
    <string name="massage_machine_modle6">刮痧</string>
    <string name="massage_machine_modle7">自动</string>
    <string name="massage_machine_modle8">音乐按摩</string>
    <string name="settings">设置</string>
    <string name="timer">定时</string>
    <string name="frequnce">频率</string>
    <string name="low_frequence">低频</string>
    <string name="high_frequence">中频</string>
    <string name="massage_mode">模式选择</string>
    <string name="strength">强度</string>
    <string name="login">请登录</string>
    <string name="share">分享</string>
    <string name="online_shop">商城</string>
    <string name="help">帮助</string>
    <!-- register and login -->
    <string name="input_user_name">请输入您的用户名</string>
    <string name="input_password_hint">请输入您的密码</string>
    <string name="input_password_confirm">请再次输入您的密码</string>
    <string name="input_email">请输入您的邮箱</string>
    <string name="input_phone">请输入您的手机号码</string>
    <string name="register">注册</string>
    <string name="login_user_name_hint">请输入用户名</string>
    <string name="user_name_hint">请输入长度为4-20的姓名, 由文字或字母或数字或\"_\",\"-\" 组成</string>
    <string name="not_mail_format">邮箱格式不对</string>
    <string name="login_user_password_hint">请输入密码</string>
    <string name="password_not_same">密码不一致请重新输入</string>
    <string name="user_password_hint">请输入长度为6-16的密码, 由字母, 数字,\"_\",\"-\"组成</string>
    <string name="register_fail">注册失败,请重试！</string>
    <string name="log_in">登录</string>
    <string name="forget_pw">忘记密码</string>
    <string name="login_failed_message">登录失败: 姓名或密码错误</string>
    <string name="no_name_pw">用户名或密码不能为空</string>
    <string name="server_unnormal">服务器异常，请稍候再试</string>
    <string name="sharecontent">物理按摩让你远离亚健康</string>
    <string name="exit_login">退出登录</string>
    <string name="about">关于</string>
    <string name="reset_pw">重置密码</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_confirm">新密码确认</string>
    <string name="submit">提交</string>
    <string name="reset_password">重置密码</string>
    <string name="reset_password_faile">重置密码失败</string>
    <string name="title_activity_music_massage">MusicMassageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="massager">按摩</string>
    <string name="search_is_completed">搜索完成</string>
    <string name="disconnect">未连接</string>
    <string name="pair">配对</string>
    <string name="pairing_fail">配对失败</string>
    <string name="bluetooth_devices">蓝牙设备</string>
    <string name="music_massage">音乐按摩</string>
    <string name="no_song">没有歌曲</string>

</resources>
