<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hengxuan.eht.massager2.MainActivity">
<FrameLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MergeRootFrame"
    android:layout_above="@+id/bottom_menu"
    />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom_menu"
        android:background="@color/bottom_menu_bg"
        android:paddingTop="2dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label1"
            android:textColor="@color/text_checkable_color"
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/ic_tab1"
            android:id="@+id/tab1"
            android:button="@null"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label2"
            android:textColor="@color/text_checkable_color"
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/ic_tab2"
            android:id="@+id/tab2"
            android:button="@null"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label3"
            android:textColor="@color/text_checkable_color"
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/ic_tab3"
            android:id="@+id/tab3"
            android:button="@null"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label4"
            android:textColor="@color/text_checkable_color"
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/ic_tab4"
            android:id="@+id/tab4"
            android:button="@null"/>
        </RadioGroup>
</RelativeLayout>