<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingTop="6dp"
    android:paddingBottom="6dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_freqence"
        android:drawablePadding="@dimen/icon_label_padding"
        android:text="@string/frequnce"
        android:textColor="@color/text_color"
        android:gravity="center_vertical"
        android:id="@+id/title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_frequence"
            android:textColor="@color/text_color"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/low_frequence"
            android:id="@+id/toggle_frequence"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_frequence"
            android:textColor="@color/text_color"
            />
        </LinearLayout>
</LinearLayout>