<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/fragment_persion_portrait_iw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/yh"/>

    <TextView
        android:id="@+id/fragment_persion_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fragment_persion_portrait_iw"
        android:layout_margin="3dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:padding="8dp"
        android:background="@drawable/btn_bg"
        />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_persion_button_login"
        android:layout_marginTop="30dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/fragment_persion_share_rt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                >

                <ImageView
                    android:id="@+id/fragment_persion_share_iw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:minHeight="50dp"
                    android:minWidth="50dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fragment_persion_share_iw"
                    android:layout_centerHorizontal="true"
                    android:duplicateParentState="true"
                    android:ellipsize="end"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/share"
                    android:textColor="@color/text_color" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/fragment_persion_about_rt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_bg">

                <ImageView
                    android:id="@+id/fragment_persion_about_iw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:minHeight="50dp"
                    android:minWidth="50dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_help" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fragment_persion_about_iw"
                    android:layout_centerHorizontal="true"
                    android:duplicateParentState="true"
                    android:ellipsize="end"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/help"
                    android:textColor="@color/text_color" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/fragment_center_consume_rt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_bg">

                <ImageView
                    android:id="@+id/fragment_center_consume_iw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:minHeight="50dp"
                    android:minWidth="50dp"
                    android:src="@drawable/ic_shop"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fragment_center_consume_iw"
                    android:layout_centerHorizontal="true"
                    android:duplicateParentState="true"
                    android:ellipsize="end"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    android:textColor="@color/text_color"
                    android:singleLine="true"
                    android:text="@string/online_shop"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >


                <TextView
                    android:id="@+id/fragment_persion_setting_iw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_settings"
                    android:drawablePadding="2dp"
                    android:text="@string/settings"
                    android:gravity="center_horizontal"
                    android:textColor="@color/text_color"
                    android:background="@drawable/btn_bg"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="placehold"
                    android:drawableTop="@drawable/ic_settings"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="placehold"
                    android:drawableTop="@drawable/ic_settings"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
